// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchBar /> should render 1`] = `
.c3:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  border: 0;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
}

.c5 ul {
  z-index: 100;
}

.c5 li[role="option"]:nth-child(2n + 1) {
  background: #f5f7fa;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin: 0;
  padding: 0;
  max-width: 800px;
  color: #434956;
}

.c1 {
  position: absolute;
  left: 0;
  top: 0;
  margin: 1rem 0 0 1.25rem;
  width: 1.3rem;
  height: 1.3rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0 1rem 0 4rem;
  width: 100%;
  height: 50px;
  font-size: inherit;
  font-family: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #f9f9fc;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  -webkit-transition: border 250ms ease;
  transition: border 250ms ease;
}

.c4:focus {
  border-color: #006be6;
  outline: none;
}

.c6 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  margin-left: 0.5rem;
}

.c6:not([disabled]):hover,
.c6:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c6:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c6[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c6[aria-pressed="true"]:not([disabled]):hover,
.c6[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c6[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c6[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

@media (max-width:600px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    height: auto;
  }
}

@media (max-width:600px) {
  .c1 {
    display: none;
  }
}

@media (max-width:600px) {
  .c4 {
    height: 50px;
    padding: 0 1rem;
  }
}

@media (max-width:600px) {
  .c6 {
    margin-left: 0;
    margin-top: 0.625rem;
  }
}

<div>
  <form
    class="c0"
  >
    <svg
      class="c1"
      viewBox="0 0 20 20"
    >
      <title />
      <path
        d="M17.876 8.939c0 2.197-.819 4.208-2.123 5.773l4.023 4.022a.72.72 0 0 1 0 1.043.735.735 0 0 1-.522.223.736.736 0 0 1-.52-.223l-4.023-4.023a8.813 8.813 0 0 1-5.772 2.123C4.022 17.877 0 13.855 0 8.939 0 4.022 4.023 0 8.939 0c4.915 0 8.937 4.023 8.937 8.939zM9.001 16.5c4.124 0 7.499-3.375 7.499-7.5S13.125 1.5 9 1.5C4.877 1.5 1.5 4.875 1.5 9s3.376 7.5 7.5 7.5z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <label
      class="c2"
      for="main-search-input"
    >
      <span
        class="c3"
      >
        Rechercher
      </span>
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="react-autowhatever-cdtn-documents-suggester"
        role="combobox"
        style="flex: 1;"
      >
        <input
          aria-autocomplete="list"
          aria-controls="react-autowhatever-cdtn-documents-suggester"
          autocomplete="off"
          class="c4"
          id="main-search-input"
          name="query"
          placeholder="Recherche"
          type="search"
          value=""
        />
        <div
          class="c5"
          id="react-autowhatever-cdtn-documents-suggester"
          role="listbox"
        />
      </div>
    </label>
    <button
      aria-pressed="false"
      class="c6"
      type="submit"
    >
      Rechercher
    </button>
  </form>
</div>
`;

exports[`<SearchBar /> should render suggestions 1`] = `
.c3:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  border: 0;
}

.c7 {
  display: inline-block;
}

.c6 p {
  margin: 0;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
}

.c5 ul {
  z-index: 100;
}

.c5 li[role="option"]:nth-child(2n + 1) {
  background: #f5f7fa;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin: 0;
  padding: 0;
  max-width: 800px;
  color: #434956;
}

.c1 {
  position: absolute;
  left: 0;
  top: 0;
  margin: 1rem 0 0 1.25rem;
  width: 1.3rem;
  height: 1.3rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0 1rem 0 4rem;
  width: 100%;
  height: 50px;
  font-size: inherit;
  font-family: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #f9f9fc;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  -webkit-transition: border 250ms ease;
  transition: border 250ms ease;
}

.c4:focus {
  border-color: #006be6;
  outline: none;
}

.c8 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  margin-left: 0.5rem;
}

.c8:not([disabled]):hover,
.c8:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c8:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c8[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c8[aria-pressed="true"]:not([disabled]):hover,
.c8[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c8[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c8[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

@media (max-width:600px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    height: auto;
  }
}

@media (max-width:600px) {
  .c1 {
    display: none;
  }
}

@media (max-width:600px) {
  .c4 {
    height: 50px;
    padding: 0 1rem;
  }
}

@media (max-width:600px) {
  .c8 {
    margin-left: 0;
    margin-top: 0.625rem;
  }
}

<div>
  <form
    class="c0"
  >
    <svg
      class="c1"
      viewBox="0 0 20 20"
    >
      <title />
      <path
        d="M17.876 8.939c0 2.197-.819 4.208-2.123 5.773l4.023 4.022a.72.72 0 0 1 0 1.043.735.735 0 0 1-.522.223.736.736 0 0 1-.52-.223l-4.023-4.023a8.813 8.813 0 0 1-5.772 2.123C4.022 17.877 0 13.855 0 8.939 0 4.022 4.023 0 8.939 0c4.915 0 8.937 4.023 8.937 8.939zM9.001 16.5c4.124 0 7.499-3.375 7.499-7.5S13.125 1.5 9 1.5C4.877 1.5 1.5 4.875 1.5 9s3.376 7.5 7.5 7.5z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <label
      class="c2"
      for="main-search-input"
    >
      <span
        class="c3"
      >
        Rechercher
      </span>
      <div
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="react-autowhatever-cdtn-documents-suggester"
        role="combobox"
        style="flex: 1;"
      >
        <input
          aria-autocomplete="list"
          aria-controls="react-autowhatever-cdtn-documents-suggester"
          autocomplete="off"
          class="c4"
          id="main-search-input"
          name="query"
          placeholder="Recherche"
          type="search"
          value="yolo"
        />
        <div
          class="c5"
          id="react-autowhatever-cdtn-documents-suggester"
          role="listbox"
        >
          <ul
            role="listbox"
            style="margin: .5em 0px 0px 0px; padding: 0px 0px 0px 0px; border: 1px solid silver; border-radius: 3px; background: white; position: absolute; left: 0px; right: 0px; box-shadow: 0 10px 10px -10px #b7bcdf;"
          >
            <li
              aria-selected="false"
              data-suggestion-index="0"
              id="react-autowhatever-cdtn-documents-suggester--item-0"
              role="option"
              style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
            >
              <div
                class="c6"
              >
                <div
                  class="c7"
                >
                  foo
                </div>
              </div>
            </li>
            <li
              aria-selected="false"
              data-suggestion-index="1"
              id="react-autowhatever-cdtn-documents-suggester--item-1"
              role="option"
              style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
            >
              <div
                class="c6"
              >
                <div
                  class="c7"
                >
                  foobar
                </div>
              </div>
            </li>
            <li
              aria-selected="false"
              data-suggestion-index="2"
              id="react-autowhatever-cdtn-documents-suggester--item-2"
              role="option"
              style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
            >
              <div
                class="c6"
              >
                <div
                  class="c7"
                >
                  foo bar ?
                </div>
              </div>
            </li>
            <li
              aria-selected="false"
              data-suggestion-index="3"
              id="react-autowhatever-cdtn-documents-suggester--item-3"
              role="option"
              style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
            >
              <div
                class="c6"
              >
                <div
                  class="c7"
                >
                  foo bazzz
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </label>
    <button
      aria-pressed="false"
      class="c8"
      type="submit"
    >
      Rechercher
    </button>
  </form>
</div>
`;
